--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "07-restserver",
   "version": "1.0.0",
-  "engines":{
+  "engines": {
     "node": "12.13.0"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
+    "dev": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "mongoose-unique-validator": "^2.0.3",
     "underscore": "^1.10.2"
