--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "google-auth-library": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
